v0.0.1/modules/schema/pages/class/RaiseLowerCommand.adoc
= `RaiseLowerCommand`
:toclevels: 4


+++An analog control that increases or decreases a set point value with pulses. Unless otherwise specified, one pulse moves the set point by one.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:RaiseLowerCommand`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/IOPoint.adoc[`IOPoint`]
*** xref::class/Control.adoc[`Control`]
**** xref::class/AnalogControl.adoc[`AnalogControl`]
***** *`RaiseLowerCommand`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
RaiseLowerCommand {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ValueAliasSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



AnalogValue {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



RemoteControl {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



PowerSystemResource {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ControlAction {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ProvidedBilateralPoint {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



IOPointSource {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}




RaiseLowerCommand -> ValueAliasSet: ValueAliasSet


RaiseLowerCommand -> AnalogValue: AnalogValue


RaiseLowerCommand -> RemoteControl: RemoteControl


RaiseLowerCommand -> PowerSystemResource: PowerSystemResource


RaiseLowerCommand -> ControlAction: ControlAction


RaiseLowerCommand -> ProvidedBilateralPoint: BilateralToIOPoint


RaiseLowerCommand -> IOPointSource: IOPointSource


RaiseLowerCommand -> DiagramObject: DiagramObjects


RaiseLowerCommand -> InstanceSet: InstanceSet


RaiseLowerCommand -> Name: Names


RaiseLowerCommand -> ChangeSetMember: PropertiesCIMDataObject


RaiseLowerCommand -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<AnalogValue,`AnalogValue`>>
| 1
| xref::class/AnalogValue.adoc[`AnalogValue`]
| +++The MeasurementValue that is controlled.+++

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<ValueAliasSet,`ValueAliasSet`>>
| 0..1
| xref::class/ValueAliasSet.adoc[`ValueAliasSet`]
| +++The ValueAliasSet used for translation of a Control value to a name.+++

| <<ControlAction,`ControlAction`>>
| 0..1
| xref::class/ControlAction.adoc[`ControlAction`]
| +++The control action that is performed on the control+++

| <<IOPointSource,`IOPointSource`>>
| 0..1
| xref::class/IOPointSource.adoc[`IOPointSource`]
| +++Local merasurement value source for an ICCP point.+++

| <<PowerSystemResource,`PowerSystemResource`>>
| 0..1
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]
| +++Regulating device governed by this control output.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<RemoteControl,`RemoteControl`>>
| 0..1
| xref::class/RemoteControl.adoc[`RemoteControl`]
| +++The remote point controlling the physical actuator.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<controlType,`controlType`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Specifies the type of Control. For example, this specifies if the Control represents BreakerOpen, BreakerClose, GeneratorVoltageSetPoint, GeneratorRaise, GeneratorLower, etc.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<maxValue,`maxValue`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Normal value range maximum for any of the Control.value. Used for scaling, e.g. in bar graphs.+++

| <<minValue,`minValue`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Normal value range minimum for any of the Control.value. Used for scaling, e.g. in bar graphs.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<operationInProgress,`operationInProgress`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Indicates that a client is currently sending control commands that has not completed.+++

| <<timeStamp,`timeStamp`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++The last time a control output was sent.+++

| <<unitMultiplier,`unitMultiplier`>>
| 0..1
| xref::enumeration/UnitMultiplier.adoc[`UnitMultiplier`]
| +++The unit multiplier of the controlled quantity.+++

| <<unitSymbol,`unitSymbol`>>
| 0..1
| xref::enumeration/UnitSymbol.adoc[`UnitSymbol`]
| +++The unit of measure of the controlled quantity.+++

| <<BilateralToIOPoint,`BilateralToIOPoint`>>
| 0..*
| xref::class/ProvidedBilateralPoint.adoc[`ProvidedBilateralPoint`]
| +++Bilateral ICCP point for the measurement or control.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#AnalogValue]
=== `AnalogValue`
+++The MeasurementValue that is controlled.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:AnalogControl.AnalogValue`
| Cardinality
| 1
| Type
| xref::class/AnalogValue.adoc[`AnalogValue`]

| Inherited from
| xref::class/AnalogControl.adoc[`AnalogControl`]


|===

//[discrete]
[#BilateralToIOPoint]
=== `BilateralToIOPoint`
+++Bilateral ICCP point for the measurement or control.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IOPoint.BilateralToIOPoint`
| Cardinality
| 0..*
| Type
| xref::class/ProvidedBilateralPoint.adoc[`ProvidedBilateralPoint`]

| Inherited from
| xref::class/IOPoint.adoc[`IOPoint`]


|===

//[discrete]
[#ControlAction]
=== `ControlAction`
+++The control action that is performed on the control+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Control.ControlAction`
| Cardinality
| 0..1
| Type
| xref::class/ControlAction.adoc[`ControlAction`]

| Inherited from
| xref::class/Control.adoc[`Control`]


|===

//[discrete]
[#controlType]
=== `controlType`
+++Specifies the type of Control. For example, this specifies if the Control represents BreakerOpen, BreakerClose, GeneratorVoltageSetPoint, GeneratorRaise, GeneratorLower, etc.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Control.controlType`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Control.adoc[`Control`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#IOPointSource]
=== `IOPointSource`
+++Local merasurement value source for an ICCP point.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IOPoint.IOPointSource`
| Cardinality
| 0..1
| Type
| xref::class/IOPointSource.adoc[`IOPointSource`]

| Inherited from
| xref::class/IOPoint.adoc[`IOPoint`]


|===

//[discrete]
[#maxValue]
=== `maxValue`
+++Normal value range maximum for any of the Control.value. Used for scaling, e.g. in bar graphs.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:AnalogControl.maxValue`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]

| Inherited from
| xref::class/AnalogControl.adoc[`AnalogControl`]


|===

//[discrete]
[#minValue]
=== `minValue`
+++Normal value range minimum for any of the Control.value. Used for scaling, e.g. in bar graphs.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:AnalogControl.minValue`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]

| Inherited from
| xref::class/AnalogControl.adoc[`AnalogControl`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#operationInProgress]
=== `operationInProgress`
+++Indicates that a client is currently sending control commands that has not completed.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Control.operationInProgress`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/Control.adoc[`Control`]


|===

//[discrete]
[#PowerSystemResource]
=== `PowerSystemResource`
+++Regulating device governed by this control output.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Control.PowerSystemResource`
| Cardinality
| 0..1
| Type
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| Inherited from
| xref::class/Control.adoc[`Control`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#RemoteControl]
=== `RemoteControl`
+++The remote point controlling the physical actuator.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Control.RemoteControl`
| Cardinality
| 0..1
| Type
| xref::class/RemoteControl.adoc[`RemoteControl`]

| Inherited from
| xref::class/Control.adoc[`Control`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#timeStamp]
=== `timeStamp`
+++The last time a control output was sent.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Control.timeStamp`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/Control.adoc[`Control`]


|===

//[discrete]
[#unitMultiplier]
=== `unitMultiplier`
+++The unit multiplier of the controlled quantity.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Control.unitMultiplier`
| Cardinality
| 0..1
| Type
| xref::enumeration/UnitMultiplier.adoc[`UnitMultiplier`]

| Inherited from
| xref::class/Control.adoc[`Control`]


|===

//[discrete]
[#unitSymbol]
=== `unitSymbol`
+++The unit of measure of the controlled quantity.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Control.unitSymbol`
| Cardinality
| 0..1
| Type
| xref::enumeration/UnitSymbol.adoc[`UnitSymbol`]

| Inherited from
| xref::class/Control.adoc[`Control`]


|===

//[discrete]
[#ValueAliasSet]
=== `ValueAliasSet`
+++The ValueAliasSet used for translation of a Control value to a name.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:RaiseLowerCommand.ValueAliasSet`
| Cardinality
| 0..1
| Type
| xref::class/ValueAliasSet.adoc[`ValueAliasSet`]


|===


